Flags on mobile, fix some filter-css
Summary: Sets device flag on mobile, cleans up filter css a bit.

Test Plan: Tested filters on homepage, maniphest, flags, uiexamples.

Reviewers: epriestley

Reviewed By: epriestley

CC: aran, Korvin

Differential Revision: https://secure.phabricator.com/D5559

--- a/webroot/rsrc/css/aphront/list-filter-view.css
+++ b/webroot/rsrc/css/aphront/list-filter-view.css
@@ -26,8 +26,8 @@
 }
 
 .aphront-list-filter-view-controls .aphront-form-view {
-  border-width: 0;
-  border-bottom: 1px solid #c0c5d1;
+  border-left: none;
+  border-right: none;
   padding: 12px 0 6px;
 }
 
